--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
-    <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js'></script>
-    <script src='/assets/script.js'></script>
+    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src='/assets/scripts/scripts.js'></script>
     <title>SFBike</title>
   </head>
 
