--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
     <script src='/assets/scripts/scripts.js'></script>
+    <link rel='stylesheet' type='text/css' href='/assets/stylesheets/styles.css'></link>
     <title>SFBike</title>
   </head>
 
